--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,2 +1,29 @@
-<h1>Tweet#edit,</h1>
-<p>Find me in app/views/tweet/edit,.html.erb</p>
+<h1>Edit Tweet</h1>
+<%= render "form" %>
+<%= link_to "Show", @tweet %>
+<!--
+<%= form_for(@tweet) do |f| %>
+<% if @tweet.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@tweet.errors.count, "error") %> prohibited this tweet from being saved:</h2>
+      <ul>
+        <% @tweet.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= f.label :message %><br>
+    <%= f.text_area :message %>
+  </div>
+  <div class="field">
+    <%= f.hidden_field :user_id, value: current_user.id %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %> -->
+<!-- 
+ <%= link_to 'Back', tweets_path %>  -->
