--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,6 +1,7 @@
 <h1>New Tweet</h1>
+<%= render "form" %>
 
-<%= form_for(@tweet) do |f| %>
+<!-- <%= form_for(@tweet) do |f| %>
 <% if @tweet.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@tweet.errors.count, "error") %> prohibited this tweet from being saved:</h2>
@@ -18,12 +19,11 @@
     <%= f.text_area :message %>
   </div>
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id, value: current_user.id %>
+    <%= f.hidden_field :user_id, value: current_user.id %>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
-<% end %>
+<% end %> -->
 
-<%= link_to 'Back', tweets_path %>
+<!-- <%= link_to 'Back', tweets_path %> -->
