--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -23,4 +23,8 @@
   </tbody>
 </table>
 <br>
-<%= link_to 'New Tweet', new_tweet_path %>
+<%= link_to 'New Tweet', new_tweet_path%>
+
+
+<%= link_to "Sign Out", destroy_user_session_path,
+method: :delete, class: "btn btn-danger"%>
